--- a/config.yml
+++ b/config.yml
@@ -3,20 +3,25 @@
 #   $INPUT_DIR --> the value of {container.input_dir}
 #   $OUTPUT_DIR --> the value of {container.output_dir} + `--job-name`
 #   $TEMP_DIR --> the value of {container.temp_dir} + `--job-name`
+#   $REPO_DIR --> the value of {container.repo_dir}
 
 host:
     input_dir: /home/ubuntu/dev/ta1_integration_inputs
     output_dir: /home/ubuntu/dev/ta1-output
     temp_dir: /home/ubuntu/dev/ta1-temp
+    repo_dir: /home/ubuntu/dev/
 
 
 container:
     input_dir: /ta1/input
     output_dir: /ta1/output
     temp_dir: /ta1/temp
+    repo_dir: /ta1/dev
 
 
-# 2
+# ---------------------------------------------------------------------------
+# LEGEND_SEGMENT
+# ---------------------------------------------------------------------------
 # where: integration/legend_segment
 # by: Uncharted
 # requires: (nothing)
@@ -27,19 +32,21 @@ legend_segment:
     # outputs:
     output: $OUTPUT_DIR/legend_segment
     # misc:
-    model: $INPUT_DIR/legend_segment/layoutlmv3_20230929
+    model: $INPUT_DIR/modules/legend_segment/layoutlmv3_20230929
 
 
-# 3
+# ---------------------------------------------------------------------------
+# LEGEND_ITEM_SEGMENT
+# ---------------------------------------------------------------------------
 # where: segmentation/legend_item_segmentation
 # by: Fandel
-# requires: 6
+# requires: text_spotting
 # produces: geojson
 legend_item_segment:
     # inputs:
     input_image: $INPUT_DIR/maps/$MAP_NAME/$MAP_NAME.tif
     #path_to_mapkurator_output: $OUTPUT_DIR/text_spotting/mapKurator_test/stitch/test/$MAP_NAME.geojson
-    input_legend_segmentation: $INPUT_DIR/legend_item_segment/ch2_validation_evaluation_labels_coco.json
+    input_legend_segmentation: $INPUT_DIR/modules/legend_item_segment/ch2_validation_evaluation_labels_coco.json
     # outputs:
     output_dir: $OUTPUT_DIR/legend_item_segment
     # misc:
@@ -51,10 +58,12 @@ legend_item_segment:
     log: $OUTPUT_DIR/legend_item_segment/log_file.txt
 
 
-# 4
+# ---------------------------------------------------------------------------
+# LEGEND_ITEM_DESCRIPTION
+# ---------------------------------------------------------------------------
 # where: segmentation/legend_item_description_segment
 # by: Weiwei
-# requires: 2, 3
+# requires: legend_segment, legend_item_segment
 # produces: json
 legend_item_description:
     # inputs:
@@ -70,7 +79,9 @@ legend_item_description:
     gpt4_intermediate_dir: $TEMP_DIR/legend_item_description/gpt4_temp_dir
 
 
-# 5
+# ---------------------------------------------------------------------------
+# MAP_CROP
+# ---------------------------------------------------------------------------
 # where: system/image_crop
 # by: Weiwei
 # requires: (none)
@@ -86,10 +97,12 @@ map_crop:
     strides: [1000, 256]
 
 
-# 6
+# ---------------------------------------------------------------------------
+# TEXT_SPOTTING
+# ---------------------------------------------------------------------------
 # where: integration/text_spotting
 # by: Weiwei (Zekun)
-# requires: 5
+# requires: map_crop
 # produced: geojson
 text_spotting:
     # inputs:
@@ -108,10 +121,12 @@ text_spotting:
     module_img_geojson: ""
 
 
-# 7
+# ---------------------------------------------------------------------------
+# LINE_EXTRACT
+# ---------------------------------------------------------------------------
 # where: line
 # by: Weiwei
-# requires: 4, 5
+# requires: legend_item_description, map_crop
 # produces: geojson
 line_extract:
     # inputs:
@@ -120,18 +135,20 @@ line_extract:
     # outputs:
     prediction_dir: $OUTPUT_DIR/line_extract
     # misc:
-    config: $INPUT_DIR/line_extract/usgs_railroads.yaml
+    config: $INPUT_DIR/modules/line_extract/usgs_railroads.yaml
     map_name: $MAP_NAME
     cuda_visible_device: 0
     predict_raster: ""
     # predict_vector: ""
-    trained_model_dir: $INPUT_DIR/line_extract/trained_weights
+    trained_model_dir: $INPUT_DIR/modules/line_extract/trained_weights
 
 
-# 8: uses 3 and 4
+# ---------------------------------------------------------------------------
+# POLYGON_EXTRACT
+# ---------------------------------------------------------------------------
 # where: polygon
 # by: Fandel
-# requires: 3
+# requires: legend_item_segment
 # produces: geojson?
 polygon_extract:
     # inputs:
@@ -142,23 +159,34 @@ polygon_extract:
     dir_to_integrated_output: $OUTPUT_DIR/polygon_extract
     # misc:
     version: 0
-    log: $OUTPUT_DIR/polygon_extract/log_file.txt"
+    log: $OUTPUT_DIR/polygon_extract/log_file.txt
     threads: 1
 
 
-# 9
+# ---------------------------------------------------------------------------
+# POINT_EXTRACT
+# ---------------------------------------------------------------------------
 # where: point
 # by: Leeje
-# requires: 4, 5
+# requires: legend_item_description, map_crop
 # produces: TIF, geojson
 point_extract:
-    # inputs:
-    # outputs:
-    # misc:
-    version: ""
+    #inputs:
+    map_dir: $INPUT_DIR/maps/$MAP_NAME
+    #outputs:
+    output_dir_root: $OUTPUT_DIR/point_extract
+    #misc:
+    map_metadata_dir: $OUTPUT_DIR/legend_item_description
+    cropped_legend_dir: /tmp
+    template_dir: $REPO_DIR/usc-umn-inferlink-ta1/point/point-symbol-pipeline/Template
+    processed_legend_dir: /tmp
+    map_patches_dir: $OUTPUT_DIR/map_crop
+    model_weights_dir: $REPO_DIR/usc-umn-inferlink-ta1/point/point-symbol-pipeline/Model_weights
 
 
-# 10
+# ---------------------------------------------------------------------------
+# GEOREFERENCE
+# ---------------------------------------------------------------------------
 # where: georeference
 # by: Weiwei
 # requires: (none)
@@ -166,17 +194,19 @@ point_extract:
 georeference:
     # inputs:
     input_path: $INPUT_DIR/maps/$MAP_NAME/$MAP_NAME.tif
-    support_path: $INPUT_DIR/georeference
+    support_path: $INPUT_DIR/modules/georeference
     # outputs:
     output_path: $OUTPUT_DIR/georeference/$MAP_NAME.json
     # misc:
     temp_path: $TEMP_DIR/georeference
 
 
-# 11
+# ---------------------------------------------------------------------------
+# GEOPACKAGE
+# ---------------------------------------------------------------------------
 # where: geopackage
 # by: Weiwei
-# requires: point_extract, line_extract, polygon_extract, georeference
+# requires: point_extract, line_extract, polygon_extract, georeference, legend_segment
 # produces: ?
 geopackage:
     # inputs:
