--- a/docker/modules/text_spotting/Dockerfile
+++ b/docker/modules/text_spotting/Dockerfile
@@ -1,6 +1,6 @@
 FROM knowledgecomputing/mapkurator_recogito_2023:latest
 
-COPY . /ta1/dev/usc-umn-inferlink-ta1/
+COPY ./usc-umn-inferlink-ta1 /ta1/dev/usc-umn-inferlink-ta1
 
 RUN cp \
     /ta1/dev/usc-umn-inferlink-ta1/system/mapkurator/mapkurator-system/run_text_spotting.py \
@@ -10,7 +10,10 @@ RUN cp \
     /ta1/dev/usc-umn-inferlink-ta1/system/mapkurator/mapkurator-system/m3_image_geojson/stitch_output.py \
     /home/mapkurator-system/m3_image_geojson/stitch_output.py
 
+COPY ./ta1_integration/docker/modules/text_spotting/runme.sh \
+    /home/cmaas/text_spotting_runme.sh
+    
 # INCLUDEX perms.txt
 
 CMD []
-ENTRYPOINT [  "/ta1/dev/ta1_integration/docker/modules/text_spotting/runme.sh" ]
+ENTRYPOINT [ "/home/cmaas/text_spotting_runme.sh" ]
