--- a/docker/modules/geopackage/Dockerfile
+++ b/docker/modules/geopackage/Dockerfile
@@ -3,20 +3,27 @@ FROM pytorch/pytorch:2.1.2-cuda12.1-cudnn8-devel
 # INCLUDEX base.txt
 
 RUN conda install -y -n base \
-    scipy \
-    matplotlib \
-    numpy \
     pandas==2.0.3 \
     geopandas==0.13.2 \
-    shapely==2.0.1 \
     conda-forge::gdal==3.6.2 \
-    fastai::opencv-python-headless
 
-RUN apt-get install -y libtiff-dev
+RUN pip install criticalmaas.ta1-geopackage
+
+#RUN apt-get install -y libtiff-dev
+
+#    scipy \
+#    matplotlib \
+#    numpy \
+#    shapely==2.0.1 \
+#    fastai::opencv-python-headless
+
 
 # INCLUDEX perms.txt
 
 COPY . /ta1/dev/usc-umn-inferlink-ta1/
 
 CMD []
-ENTRYPOINT ["echo", "Hi."]
+ENTRYPOINT [ \
+    "python", \
+    "/ta1/dev/usc-umn-inferlink-ta1/tree/main/system/gpkg_generation/run_gpkg_writer.py"
+]
