--- a/config.yml
+++ b/config.yml
@@ -27,12 +27,13 @@ container:
 # requires: (nothing)
 # produces: X_map_segmentation.json
 legend_segment:
-    # inputs:
+    # input:
     input: $INPUT_DIR/maps/$MAP_NAME
-    # outputs:
-    output: $OUTPUT_DIR/legend_segment
-    # misc:
     model: $INPUT_DIR/modules/legend_segment/layoutlmv3_20230929
+    # output:
+    output: $OUTPUT_DIR/legend_segment
+    # temp:
+    # misc:
 
 
 # ---------------------------------------------------------------------------
@@ -43,19 +44,18 @@ legend_segment:
 # requires: text_spotting
 # produces: geojson
 legend_item_segment:
-    # inputs:
+    # input:
     input_image: $INPUT_DIR/maps/$MAP_NAME/$MAP_NAME.tif
-    #path_to_mapkurator_output: $OUTPUT_DIR/text_spotting/mapKurator_test/stitch/test/$MAP_NAME.geojson
     input_legend_segmentation: $INPUT_DIR/modules/legend_item_segment/ch2_validation_evaluation_labels_coco.json
-    # outputs:
+    # output:
     output_dir: $OUTPUT_DIR/legend_item_segment
+    log: $OUTPUT_DIR/legend_item_segment/log_file.txt
+    # temp:
+    path_to_intermediate: $TEMP_DIR/legend_item_segment
     # misc:
-    #preprocessing_for_cropping: True
     postprocessing_for_crs: True
     competition_custom: True
-    path_to_intermediate: $TEMP_DIR/legend_item_segment
     version: 1.2
-    log: $OUTPUT_DIR/legend_item_segment/log_file.txt
 
 
 # ---------------------------------------------------------------------------
@@ -68,15 +68,15 @@ legend_item_segment:
 legend_item_description:
     # inputs:
     map_dir: $INPUT_DIR/maps/$MAP_NAME
-    map_name: $MAP_NAME
-    legend_json_path: $OUTPUT_DIR/legend_segment
-    ###symbol_json_dir: $OUTPUT_DIR/legend_item_segment
     symbol_json_dir: $INPUT_DIR/maps/$MAP_NAME/legend_item_segment
+    legend_json_path: $OUTPUT_DIR/legend_segment
     # outputs:
     gpt4_output_dir: $OUTPUT_DIR/legend_item_description
-    # misc:
+    # temp:
     gpt4_input_dir: $TEMP_DIR/legend_item_description/gpt4_input_dir
     gpt4_intermediate_dir: $TEMP_DIR/legend_item_description/gpt4_temp_dir
+    # misc:
+    map_name: $MAP_NAME
 
 
 # ---------------------------------------------------------------------------
@@ -89,10 +89,11 @@ legend_item_description:
 map_crop:
     # inputs:
     input_dir: $INPUT_DIR/maps/$MAP_NAME
-    map_name: $MAP_NAME
     # outputs:
     output_dir: $OUTPUT_DIR/map_crop
+    # temp:
     # misc:
+    map_name: $MAP_NAME
     patch_sizes: [1000, 256]
     strides: [1000, 256]
 
@@ -109,6 +110,7 @@ text_spotting:
     input_dir_path: $OUTPUT_DIR/map_crop/$MAP_NAME_g1000_s1000
     # outputs:
     output_folder: $OUTPUT_DIR/text_spotting
+    # temp:
     # misc:
     model_weight_path: /home/spotter_v2/PALEJUN/weights/synthmap_pretrain/model_final.pth
     spotter_config: /home/spotter_v2/PALEJUN/configs/PALEJUN/SynthMap/SynthMap_Polygon.yaml
@@ -130,17 +132,17 @@ text_spotting:
 # produces: geojson
 line_extract:
     # inputs:
+    config: $INPUT_DIR/modules/line_extract/usgs_railroads.yaml
+    trained_model_dir: $INPUT_DIR/modules/line_extract/trained_weights
     map_legend_json: $OUTPUT_DIR/legend_item_description
     cropped_image_dir: $OUTPUT_DIR/map_crop/$MAP_NAME_g256_s256"
     # outputs:
     prediction_dir: $OUTPUT_DIR/line_extract
+    # temp:
     # misc:
-    config: $INPUT_DIR/modules/line_extract/usgs_railroads.yaml
     map_name: $MAP_NAME
     cuda_visible_device: 0
     predict_raster: ""
-    # predict_vector: ""
-    trained_model_dir: $INPUT_DIR/modules/line_extract/trained_weights
 
 
 # ---------------------------------------------------------------------------
@@ -152,17 +154,17 @@ line_extract:
 # produces: geojson?
 polygon_extract:
     # inputs:
+    path_to_tif: $INPUT_DIR/maps/$MAP_NAME/$MAP_NAME.tif
     path_to_legend_description: $OUTPUT_DIR/legend_item_description/$MAP_NAME_polygon.json
     path_to_legend_solution: $OUTPUT_DIR/legend_item_segment/$MAP_NAME_PolygonType.geojson
-    path_to_tif: $INPUT_DIR/maps/$MAP_NAME/$MAP_NAME.tif
     path_to_json: $OUTPUT_DIR/legend_item_segment/$MAP_NAME_PolygonType_internal.json
     # outputs:
     dir_to_integrated_output: $OUTPUT_DIR/polygon_extract
+    log: $OUTPUT_DIR/polygon_extract/log_file.txt
+    # temp:
     dir_to_intermediate: $TEMP_DIR/polygon_extract
     # misc:
     version: 0
-    log: $OUTPUT_DIR/polygon_extract/log_file.txt
-    #threads: 1
 
 
 # ---------------------------------------------------------------------------
@@ -173,17 +175,18 @@ polygon_extract:
 # requires: legend_item_description, map_crop
 # produces: TIF, geojson
 point_extract:
-    #inputs:
+    # inputs:
     map_dir: $INPUT_DIR/maps/$MAP_NAME
-    #outputs:
-    output_dir_root: $OUTPUT_DIR/point_extract
-    #misc:
-    map_metadata_dir: $OUTPUT_DIR/legend_item_description
-    cropped_legend_dir: $TEMP_DIR/point_extract
     template_dir: $REPO_DIR/usc-umn-inferlink-ta1/point/point-symbol-pipeline/Template
-    processed_legend_dir: $TEMP_DIR/point_extract
-    map_patches_dir: $OUTPUT_DIR/map_crop
     model_weights_dir: $REPO_DIR/usc-umn-inferlink-ta1/point/point-symbol-pipeline/Model_weights
+    # outputs:
+    output_dir_root: $OUTPUT_DIR/point_extract
+    map_metadata_dir: $OUTPUT_DIR/legend_item_description
+    map_patches_dir: $OUTPUT_DIR/map_crop
+    # temp:
+    cropped_legend_dir: $TEMP_DIR/point_extract
+    processed_legend_dir: $TEMP_DIR/point_extract
+    # misc:
 
 
 # ---------------------------------------------------------------------------
@@ -199,8 +202,9 @@ georeference:
     support_path: $INPUT_DIR/modules/georeference
     # outputs:
     output_path: $OUTPUT_DIR/georeference/$MAP_NAME.json
-    # misc:
+    # temp:
     temp_path: $TEMP_DIR/georeference
+    # misc:
 
 
 # ---------------------------------------------------------------------------
@@ -212,14 +216,15 @@ georeference:
 # produces: ?
 geopackage:
     # inputs:
-    map_name: $MAP_NAME
+    nongeoref_map_dir: $INPUT_DIR/maps
     layout_output_dir: $OUTPUT_DIR/legend_item_description
     georef_output_dir: $OUTPUT_DIR/example_inputs/georeference
     poly_output_dir: $OUTPUT_DIR/polygon_extract
     ln_output_dir: $OUTPUT_DIR/line_extract
     pt_output_dir: $OUTPUT_DIR/point_extract
-    nongeoref_map_dir: $INPUT_DIR/maps
     # outputs:
     output_dir: $OUTPUT_DIR/geopackage/gpkg_outputs
     georef_map_output: $OUTPUT_DIR/geopackage
+    # temp:
     # misc:
+    map_name: $MAP_NAME
