--- a/config.yml
+++ b/config.yml
@@ -144,6 +144,7 @@ line_extract:
     map_name: $MAP_NAME
     cuda_visible_device: 0
     predict_raster: ""
+    predict_vector: ""
 
 
 # ---------------------------------------------------------------------------
