--- a/docker/hello-gpu/Dockerfile
+++ b/docker/hello-gpu/Dockerfile
@@ -3,7 +3,7 @@
 
 FROM pytorch/pytorch:2.1.2-cuda12.1-cudnn8-devel
 
-RUN pip install nvidia-ml-py3
+RUN pip install nvidia-ml-py3 pydantic
 
 COPY ./ta1_integration /ta1/dev/ta1_integration
 
