--- a/docker/modules/legend_segment/Dockerfile
+++ b/docker/modules/legend_segment/Dockerfile
@@ -8,4 +8,7 @@ WORKDIR /ta1/dev/uncharted-ta1
 ENV PYTHONPATH=/ta1/dev/uncharted-ta1:$PYTHONPATH
 
 CMD []
-ENTRYPOINT ["python3", "-W", "ignore", "pipelines/segmentation/run_pipeline.py"]
+ENTRYPOINT [ \
+    "python3", "-m", "ilperf", "-d", "5", "-o", "/ta1/output/legend_segment/ilperf_docker.json", "--exec", \
+    "python3", "-W", "ignore", "pipelines/segmentation/run_pipeline.py" \
+    ]
