--- a/docker/modules/map_crop/Dockerfile
+++ b/docker/modules/map_crop/Dockerfile
@@ -19,5 +19,7 @@ RUN apt-get install -y libtiff-dev
 COPY . /ta1/dev/usc-umn-inferlink-ta1/
 
 CMD []
-ENTRYPOINT ["python", "/ta1/dev/usc-umn-inferlink-ta1/system/image_crop/map2patch.py"]
-
+ENTRYPOINT [ \
+    "python", "-m", "ilperf", "-d", "5", "-o", "/ta1/output/map_crop/ilperf_docker.json", "--exec", \
+    "python", "/ta1/dev/usc-umn-inferlink-ta1/system/image_crop/map2patch.py" \
+]
