--- a/docker/modules/point_extract/Dockerfile
+++ b/docker/modules/point_extract/Dockerfile
@@ -44,4 +44,7 @@ RUN pip install geopandas rasterio
 COPY . /ta1/dev/usc-umn-inferlink-ta1/
 
 CMD []
-ENTRYPOINT ["python", "/ta1/dev/usc-umn-inferlink-ta1/point/point-symbol-pipeline/Program/run_final_text.py"]
+ENTRYPOINT [ \
+    "python", "-m", "ilperf", "-d", "5", "-o", "/ta1/output/point_extract/ilperf_docker.json", "--exec", \
+    "python", "/ta1/dev/usc-umn-inferlink-ta1/point/point-symbol-pipeline/Program/run_final_text.py" \
+    ]
