--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ pydantic-yaml = "^1.2.0"
 pydot = "^2.0.0"
 python = "^3.10"
 pyyaml = "^6.0.1"
+pip = "^24.0"
+install = "^1.3.5"
+ilperf = {git = "ssh://git@bitbucket.org/inferlink/ilperf.git"}
 
 
 [build-system]
