--- a/config.yml
+++ b/config.yml
@@ -64,7 +64,7 @@ modules:
             postprocessing_for_crs: True
             competition_custom: True
             version: 1.2
-            only_poly: True
+            only_poly: False
 
 
     # ---------------------------------------------------------------------------
@@ -83,6 +83,7 @@ modules:
             legend_json_dir: $OUTPUT_DIR/legend_segment
             # outputs:
             output_dir: $OUTPUT_DIR/legend_item_description
+            log_path: $OUTPUT_DIR/legend_item_description/run.log
             # temp:
             temp_dir: $TEMP_DIR/legend_item_description
             #gpt4_input_dir: $TEMP_DIR/legend_item_description/gpt4_input_dir
@@ -157,7 +158,7 @@ modules:
             config: $INPUT_DIR/modules/line_extract/usgs_railroads.yaml
             trained_model_dir: $INPUT_DIR/modules/line_extract/trained_weights
             map_legend_json: $OUTPUT_DIR/legend_item_description
-            cropped_image_dir: $OUTPUT_DIR/map_crop/$MAP_NAME_g256_s256
+            cropped_image_dir: $OUTPUT_DIR/map_crop/$MAP_NAME_g256_s256_wo_legend
             # outputs:
             prediction_dir: $OUTPUT_DIR/line_extract
             # temp:
@@ -210,7 +211,7 @@ modules:
             # outputs:
             output_dir_root: $OUTPUT_DIR/point_extract
             map_metadata_dir: $OUTPUT_DIR/legend_item_description
-            map_patches_dir: $OUTPUT_DIR/map_crop
+            map_patches_dir: $OUTPUT_DIR/map_crop/WY_CO_Peach_g1000_s1000_wo_legend
             # temp:
             #cropped_legend_dir: $TEMP_DIR/point_extract
             #processed_legend_dir: $TEMP_DIR/point_extract
