--- a/docker/modules/legend_item_description/Dockerfile
+++ b/docker/modules/legend_item_description/Dockerfile
@@ -25,4 +25,6 @@ ENV OPENAI_API_KEY=$openai_api_key
 COPY . /ta1/dev/usc-umn-inferlink-ta1/
 
 CMD []
-ENTRYPOINT ["python", "/ta1/dev/usc-umn-inferlink-ta1/segmentation/legend_item_description_segment/gpt4_main.py"]
+ENTRYPOINT [ \
+    "python", "/ta1/dev/usc-umn-inferlink-ta1/segmentation/legend_item_description_segment/src/gpt4_main.py" \
+    ]
