--- a/docker/modules/polygon_extract/Dockerfile
+++ b/docker/modules/polygon_extract/Dockerfile
@@ -29,4 +29,6 @@ RUN pip --no-input install gdown
 COPY . /ta1/dev/usc-umn-inferlink-ta1/
 
 CMD []
-ENTRYPOINT ["python", "/ta1/dev/usc-umn-inferlink-ta1/polygon/loam_handler.py"]
+ENTRYPOINT [ \
+    "python", "/ta1/dev/usc-umn-inferlink-ta1/polygon/loam_handler.py" \
+    ]
