--- a/config.yml
+++ b/config.yml
@@ -47,7 +47,7 @@ modules:
     # ---------------------------------------------------------------------------
     # where: segmentation/legend_item_segmentation
     # by: Fandel
-    # requires: text_spotting
+    # requires: text_spotting, legend_segment
     # produces: geojson
     -   name: legend_item_segment
         gpu: true
@@ -64,7 +64,7 @@ modules:
             postprocessing_for_crs: True
             competition_custom: True
             version: 1.2
-            only_poly: True
+            only_poly: False
 
 
     # ---------------------------------------------------------------------------
@@ -80,12 +80,14 @@ modules:
             # inputs:
             map_dir: $INPUT_DIR/maps/$MAP_NAME
             symbol_json_dir: $INPUT_DIR/maps/$MAP_NAME/legend_item_segment
-            legend_json_path: $OUTPUT_DIR/legend_segment
+            legend_json_dir: $OUTPUT_DIR/legend_segment
             # outputs:
-            gpt4_output_dir: $OUTPUT_DIR/legend_item_description
+            output_dir: $OUTPUT_DIR/legend_item_description
+            log_path: $OUTPUT_DIR/legend_item_description/run.log
             # temp:
-            gpt4_input_dir: $TEMP_DIR/legend_item_description/gpt4_input_dir
-            gpt4_intermediate_dir: $TEMP_DIR/legend_item_description/gpt4_temp_dir
+            temp_dir: $TEMP_DIR/legend_item_description
+            #gpt4_input_dir: $TEMP_DIR/legend_item_description/gpt4_input_dir
+            #gpt4_intermediate_dir: $TEMP_DIR/legend_item_description/gpt4_temp_dir
             # misc:
             map_name: $MAP_NAME
 
@@ -95,13 +97,14 @@ modules:
     # ---------------------------------------------------------------------------
     # where: system/image_crop
     # by: Weiwei
-    # requires: (none)
+    # requires: legend_segment
     # produces: PNGs
     -   name: map_crop
         gpu: true
         options:
             # inputs:
             input_dir: $INPUT_DIR/maps/$MAP_NAME
+            legend_dir: $OUTPUT_DIR/legend_segment
             # outputs:
             output_dir: $OUTPUT_DIR/map_crop
             # temp:
@@ -109,6 +112,7 @@ modules:
             map_name: $MAP_NAME
             patch_sizes: [1000, 256]
             strides: [1000, 256]
+            only_crop_map_area: [True, True]
 
 
     # ---------------------------------------------------------------------------
@@ -123,7 +127,7 @@ modules:
         user: root
         options:
             # inputs:
-            input_dir_path: $OUTPUT_DIR/map_crop/$MAP_NAME_g1000_s1000
+            input_dir_path: $OUTPUT_DIR/map_crop/$MAP_NAME_g1000_s1000_wo_legend
             # outputs:
             output_folder: $OUTPUT_DIR/text_spotting
             # temp:
@@ -154,7 +158,7 @@ modules:
             config: $INPUT_DIR/modules/line_extract/usgs_railroads.yaml
             trained_model_dir: $INPUT_DIR/modules/line_extract/trained_weights
             map_legend_json: $OUTPUT_DIR/legend_item_description
-            cropped_image_dir: $OUTPUT_DIR/map_crop/$MAP_NAME_g256_s256
+            cropped_image_dir: $OUTPUT_DIR/map_crop/$MAP_NAME_g256_s256_wo_legend
             # outputs:
             prediction_dir: $OUTPUT_DIR/line_extract
             # temp:
@@ -200,17 +204,17 @@ modules:
     -   name: point_extract
         gpu: true
         options:
-            # inputs:
+            ## inputs:
             map_dir: $INPUT_DIR/maps
-            template_dir: $REPO_DIR/usc-umn-inferlink-ta1/point/point-symbol-pipeline/Template
-            model_weights_dir: $REPO_DIR/usc-umn-inferlink-ta1/point/point-symbol-pipeline/Model_weights
+            #template_dir: $REPO_DIR/usc-umn-inferlink-ta1/point/point-symbol-pipeline/Template
+            model_weights_dir: $REPO_DIR/usc-umn-inferlink-ta1/point/src/pipeline-scripts/model_weights
             # outputs:
             output_dir_root: $OUTPUT_DIR/point_extract
             map_metadata_dir: $OUTPUT_DIR/legend_item_description
-            map_patches_dir: $OUTPUT_DIR/map_crop
+            map_patches_dir: $OUTPUT_DIR/map_crop/WY_CO_Peach_g1000_s1000_wo_legend
             # temp:
-            cropped_legend_dir: $TEMP_DIR/point_extract
-            processed_legend_dir: $TEMP_DIR/point_extract
+            #cropped_legend_dir: $TEMP_DIR/point_extract
+            #processed_legend_dir: $TEMP_DIR/point_extract
             # misc:
 
 
@@ -226,11 +230,11 @@ modules:
         options:
             # inputs:
             input_path: $INPUT_DIR/maps/$MAP_NAME/$MAP_NAME.tif
-            support_path: $INPUT_DIR/modules/georeference
+            support_data_dir: $INPUT_DIR/modules/georeference/support_data
             # outputs:
             output_path: $OUTPUT_DIR/georeference/$MAP_NAME.json
             # temp:
-            temp_path: $TEMP_DIR/georeference
+            temp_dir: $TEMP_DIR/georeference
             # misc:
 
 
