--- a/docker/modules/map_crop/Dockerfile
+++ b/docker/modules/map_crop/Dockerfile
@@ -19,5 +19,6 @@ RUN apt-get install -y libtiff-dev
 COPY . /ta1/dev/usc-umn-inferlink-ta1/
 
 CMD []
-ENTRYPOINT ["python", "/ta1/dev/usc-umn-inferlink-ta1/system/image_crop/map2patch.py"]
-
+ENTRYPOINT [ \
+    "python", "/ta1/dev/usc-umn-inferlink-ta1/system/image_crop/map2patch.py" \
+]
